# phx_quadrocopter_ros

./: .gitignore  .travis.yml  README.md
hector_mapping/: CMakeLists.txt
hector_mapping/msg/: BinaryOccupancyGrid.msg  SparseGrid.msg
hector_mapping/src/: HectorMappingRos.cpp  HectorMappingRos.h
marker_recognition/: CMakeLists.txt  package.xml
marker_recognition/calibration/: cam_mat.csv
marker_recognition/classifiers/: landing_pad.xml
marker_recognition/images/: Heart_cut.psd
marker_recognition/launch/: marker_recognition.launch
marker_recognition/src/: DetectorMatcher.cpp  GraphicsHandler.cpp  PnPSolver.cpp  SignRecognition.cpp  (+2 more)
phx_arduino_uart_bridge/: CMakeLists.txt  README.md  package.xml
phx_controller/: CMakeLists.txt  package.xml
phx_gui/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
phx_kinect_bridge/: CMakeLists.txt  README.md  package.xml
phx_launch/: CMakeLists.txt  package.xml
phx_launch_files/: CMakeLists.txt  custom_rosconsole.conf  package.xml
phx_launch_files/launch/: basics.launch  debug_rangefinder.launch  debug_serial_interfaces.launch  hector_mapping.launch  hector_mapping.launch.save  hector_mapping_outdoor.launch  logging_all.launch  logging_basics.launch  logging_camera.launch  logging_map.launch  logging_rangefinder.launch  logging_replay.launch  logging_serial_interfaces.launch  mapping.launch  phoenixOdroid.launch  phx_barcode.launch  phx_basics.launch  phx_bottom_camera.launch  phx_camera.launch  phx_gps.launch  phx_logging.launch  phx_mapping.launch  phx_replay.launch  phx_trajectory_planner.launch  transforms.launch
phx_launch_files/scripts/: starter.py
phx_navigation/: CMakeLists.txt  move_base.launch  package.xml
phx_navigation/cfg/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
phx_navigation/scripts/: BugTwo.py  naive_position_hold_node.py  position_hold_node.py
phx_odometry/: CMakeLists.txt  LICENSE  README.md  package.xml
phx_odometry/launch/: panda.launch  radxa.launch  raspi.launch  start-odometry.sh  svoOnly.launch  svoOnlyLowRes.launch  svoOnlyOdroid.launch  svoPs3Cam.launch  urdf.rviz
phx_odometry/param/: camera_atan.yaml  camera_atan_low.yaml  camera_atan_ps3eye.yaml
phx_odometry/scripts/: hector_based_gps.py  hector_based_odometry.py  odometry_from_opticalflow.py
phx_odometry/src/: odometry_node.cpp
phx_odometry/urdf/: quadrotor.urdf.xacro
phx_port_interface/: CMakeLists.txt  README.md  package.xml
phx_quadrocopter/: CMakeLists.txt  env-JRetinaMacBookPro.sh  package.xml
phx_rangefinder/: CMakeLists.txt  laser_filter_cloud_config.yaml  laser_filter_config.yaml  package.xml
phx_rangefinder/scripts/: ClosestObject.py  LaserCostRange.py  LaserScanner_outdoor_filter.py  LaserScanner_outdoor_timebased_filter.py  hokuyo3D.py  hokuyo_maping_test.py  hokuyo_test.py  pyvis.py
phx_rangefinder/scripts/pyqtgraph/: WidgetGroup.py  __init__.py  exceptionHandling.py
phx_rangefinder/scripts/pyqtgraph/canvas/: CanvasItem.py  CanvasManager.py
phx_rangefinder/scripts/pyqtgraph/console/: CmdInput.py
phx_rangefinder/scripts/pyqtgraph/flowchart/: Node.py
phx_rangefinder/scripts/pyqtgraph/graphicsItems/: ArrowItem.py  ImageItem.py  ItemGroup.py  LinearRegionItem.py  PlotCurveItem.py  ROI.py  TextItem.py  VTickGroup.py
phx_rangefinder/scripts/pyqtgraph/multiprocess/: processes.py  remoteproxy.py
phx_rangefinder/scripts/pyqtgraph/opengl/: GLGraphicsItem.py  MeshData.py
phx_rangefinder/scripts/pyqtgraph/opengl/items/: GLBoxScatterPlotItem.py  GLLinePlotItem.py  GLMeshItem.py  GLVolumeItem.py
phx_rangefinder/scripts/pyqtgraph/parametertree/: SystemSolver.py
phx_rangefinder/scripts/pyqtgraph/pixmaps/: __init__.py  pixmapData_3.py
phx_rangefinder/scripts/pyqtgraph/widgets/: ColorMapWidget.py  PathButton.py  PlotWidget.py  TableWidget.py
phx_rangefinder/src/: laser_to_pointcloud.cpp
phx_simulator/: CMakeLists.txt  package.xml
phx_trajectory_planner/: CMakeLists.txt  package.xml  ros_bag_plotter.m  rosnetwork.m  rosplotlive.slx  rosplotlive2018a.slx
phx_uart_bridge/: CMakeLists.txt  README.md  package.xml
phx_uart_msp_bridge/: CMakeLists.txt  package.xml
phx_uart_msp_bridge/include/phx_uart_msp_bridge/: multiwii_msg_protocol.h  serial_com.h
phx_uart_msp_bridge/launch/: cameraOnly.launch  cameraOnlyOdroid.launch  groundstation.launch  hector_maping_test.launch  hector_mapping_test.launch  hector_slam_start.launch  laser_only.launch  mapping_box.launch  phoenixOdroid.launch  phoenixOdroidExplore.launch  testUTMtransform.launch
phx_uart_msp_bridge/msg/: Altitude.msg  Attitude.msg  AutoPilotCmd.msg  Autonomous.msg  BooleanMap.msg  ControllerCmd.msg  Diagnostics.msg  Motor.msg  RemoteControl.msg  WayPoint.msg  WayPoints.msg
phx_uart_msp_bridge/scripts/: joint_states_to_servo.py  transform_lidar_altitude.py
phx_uart_msp_bridge/src/: phx_uart_bridge_node_crab.cpp  phx_uart_bridge_node_servo.cpp  phx_uart_msp_bridge_node_fully360.cpp  phx_uart_msp_bridge_node_marvicRCaltitudeServo.cpp  phx_uart_msp_bridge_node_naze.cpp  phx_uart_msp_bridge_node_naze_mod.cpp  phx_uart_msp_bridge_node_servo.cpp  serial_com.cpp  transform_copter_stabilized_to_copter.cpp  transform_map_int_to_boolean.cpp
phx_vision/: CMakeLists.txt  Quelle.cpp  package.xml  ps3eye.yaml
phx_vision/aruco_markers/: Quelle.cpp
phx_vision/cpp/: DetectorMatcher.cpp  DetectorMatcher.h  GraphicsHandler.cpp  GraphicsHandler.h  MainRunning.cpp  MainRunning.h  PnPSolver.cpp  PnPSolver.h  SignRecognitionPhoenix.pro  main.cpp
phx_vision/msg/: Detection.msg  TargetDetections.msg
phx_vision/scripts/: CameraCalibration_Chessboard.py  ORBPoseEstimationFinal.py  ORBTest.py  PoseEstimation.py  SIFTTest.py  image_viewer.py  image_viewer_no_view.py  landingPadDetectionNode.py  landing_detection.py  landing_detection_2206.py  opticalFlowNode.py  targetDetectionNode.py  targetDetectionPublisher.py
phx_vision/scripts/qr/: picture_publisher_node.py  zbar_reader_node.py
phx_workstation_override/: CMakeLists.txt  README.md  package.xml
(+322 files in other folders)
