<package>
  <name>phx_launch_files</name>
  <version>0.0.1</version>
  <description>
    Launch Files for Phoenix projects
  </description>
  <author>Julian Tatsch</author>
  <maintainer email="jtatsch@in.tum.de">Julian Tatsch</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
