<?xml version="1.0"?>
<package>
  <name>phx_navigation</name>
  <version>0.0.1</version>
  <description>The phx_navigation package</description>
  <maintainer email="tatsch@gmail.com">tatsch@gmail.com</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>phx_uart_msp_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>phx_uart_msp_bridge</run_depend>
  <run_depend>move_base</run_depend>
</package>
