<package>
  <name>phx_quadrocopter</name>
  <version>0.0.1</version>
  <description>
    Metapackage for the TUM Phoenix autonomous quadrotor.
  </description>
  <author>Julian Tatsch</author>
  <maintainer email="jtatsch@in.tum.de">Julian Tatsch</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
   <metapackage/>
  </export>
</package>
