<?xml version="1.0"?>
<package>
  <name>phx_rangefinder</name>
  <version>0.0.1</version>
  <description>The phx_rangefinder package</description>
  <maintainer email="manuel.viermetz@dum.de">manuel.viermetz@dum.de</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>